ocp-resources/amq-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: broker
    template: amq62-basic
    xpaas: 1.3.1
  name: broker-amq-tcp-nodeport
spec:
  ports:
  - port: 61616
    protocol: TCP
    targetPort: 61616
  selector:
    deploymentConfig: broker-amq
  sessionAffinity: None
  type: NodePort
