ocp-resources/ibmmq-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mq
  name: mq-nodeport
spec:
  ports:
  - name: 1414-tcp
    port: 1414
    protocol: TCP
    targetPort: 1414
  selector:
    app: mq
    deploymentconfig: mq
  sessionAffinity: None
  type: NodePort
